# squeak-game-engine

./: .gitignore  CMakeLists.txt  README.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/shaders/: frag.glsl  vert.glsl
sge-lib/: CMakeLists.txt
sge-lib/src/: Display.cpp  Display.h
src/: main.cpp
src/sge/: Display.cpp
test-app/: CMakeLists.txt
test-app/src/: main.cpp
